[tool.poetry]
name = "blackjack-project"
version = "0.1.0"
description = "Simple simulation of a standard multi-deck blackjack game."
authors = ["Lawrence Short <lawrence.short@bjss.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pylint = "^2.13.8"
black = "^22.3.0"
mock = "^4.0.3"
pre-commit = "^2.19.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
